--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,44 @@
 body 
 {
-  color: blue;
+  text-align: center;
   font-family: 'Times New Roman', Times, serif;
+  margin: 0;
+  padding: 0;
+
 }
-.container 
+
+#header {
+  color: #333;
+  font-weight: bold;
+  border-radius: 15px;
+  background-color: blue;
+  box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+  margin: 0;
+  padding: 0.5em;
+}
+#tagline
 {
-  border: 2px solid black;
+  color: white;
+  font-weight: normal;
+  font-size: 0.8em;
+}
+.container
+{
+  width: 70%;
+  padding: 10;
+  text-align: left;
+  border: 1px solid blueviolet;
+  margin: 0 auto;
   border-radius: 15px;
   background-color: aqua;
 }
-#header {
-  color: red;
-  border: 5px solid darkblue;
-  border-radius: 15px;
-  background-color: bisque;
+.container h1
+{
+  font-size: 30px;
+  color: blue;
+}
+#post 
+{
+  padding: 1em;
+  color: #333;
 }
