Haciendo la descripción del post

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body
   background-color: aqua;
 }
 #header {
-  color: red;
+  color: slateblue;
   border: 5px solid darkblue;
   border-radius: 15px;
   background-color: bisque;
