--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 body 
 {
+  background: #1e1f24;
+  color: #333;
   text-align: center;
   font-family: 'Times New Roman', Times, serif;
   margin: 0;
@@ -17,6 +19,12 @@ body
   padding: 0.5em;
   text-align: center;
 }
+#header #logo
+  {
+    width: 20px;
+    vertical-align: middle;
+  }
+
 #tagline
 {
   color: white;
@@ -41,6 +49,7 @@ body
 #post 
 {
   padding: 1em;
+  background: white;
   color: #333;
 }
 #suscribete
