--- a/css/style.css
+++ b/css/style.css
@@ -48,3 +48,10 @@ body
   color: blue;
   font-style: italic;
 }
+#footer
+{
+  padding: 1em;
+  background-color: 777;
+  color: white;
+  text-align: center;
+}
