--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body
   border: 1px solid blueviolet;
   margin: 0 auto;
   border-radius: 15px;
-  background-color: aqua;
+  background-color:white;
 }
 .container h1
 {
@@ -60,7 +60,9 @@ body
 #footer
 {
   padding: 1em;
-  background-color: 777;
+  background-color: #777;
   color: white;
   text-align: center;
+  border-radius: 15px;
+
 }
