--- a/css/style.css
+++ b/css/style.css
@@ -11,25 +11,27 @@ body
 
 #header {
   color: rgb(117, 60, 60);
-  font-weight: bold;
+  font-weight: bolder;
+  font-size: 2.5em;
   border-radius: 15px;
   background-color: rgb(98, 98, 160);
   box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
   margin: 0;
   padding: 0.5em;
   text-align: center;
+  align-content: space-between;
 }
 #header #logo
   {
-    width: 20px;
-    vertical-align: middle;
+    width: 40px;
+    vertical-align: LEFT;
   }
 
 #tagline
 {
   color: white;
-  font-weight: normal;
-  font-size: 0.8em;
+  font-weight: bolder;
+  font-size: 1em;
 }
 .container
 {
