--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,42 @@ body
   font-weight: bolder;
   font-size: 2.5em;
   border-radius: 15px;
-  background-color: rgb(98, 98, 160);
+  background-color: rgb(77, 98, 1);
   box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
   margin: 0;
   padding: 0.5em;
   text-align: center;
   align-content: space-between;
+}
+
+.brandImage
+{
+  padding: 0;
+  height: 30px;
+}
+.nav
+{
+  display: flex;
+  justify-content: space-between;
+  background-color: #7ACC2D;
+  color: white;
+  padding: 0px;
+  align-content: center;
+}
+.nav ul
+{
+display: flex;
+align-items: center;
+}
+.nav li
+{
+list-style: none;
+padding-left: 20px;
+}
+.nav  li a
+{
+color: black;
+text-decoration: none;
 }
 #header #logo
   {
@@ -35,8 +65,8 @@ body
 }
 .container
 {
-  width: 90%;
-  padding: 10;
+  width: 99%;
+  padding: 0;
   text-align: left;
   border: 1px solid blueviolet;
   margin: 0 auto;
