--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,7 @@ body
   align-content: space-between;
 }
 
-.brandImage
-{
-  padding: 0;
-  height: 30px;
-}
+/* estilos de la barra de navegacióm */
 .nav
 {
   display: flex;
@@ -35,6 +31,11 @@ body
   color: white;
   padding: 0px;
   align-content: center;
+}
+#brandImage
+{
+  padding: 0;
+  height: 30px;
 }
 .nav ul
 {
@@ -51,6 +52,33 @@ padding-left: 20px;
 color: black;
 text-decoration: none;
 }
+.nav  li a:hover
+{
+color: white;
+}
+/* Estilos de Productos */
+.products
+{
+  background-image: url("../images/curve.png");
+  height: 200px;
+  background-size: cover;
+  background-position: center top;
+  padding:5%; 
+  display: flex;
+  justify-content: space-between;
+}
+.product
+{
+  padding: 10px;
+}
+.productContent
+{
+  background-color: white;
+  padding: 20px;
+}
+
+
+/* Estilos del header */
 #header #logo
   {
     width: 40px;
@@ -67,7 +95,7 @@ text-decoration: none;
 {
   width: 99%;
   padding: 0;
-  text-align: left;
+  text-align: center;
   border: 1px solid blueviolet;
   margin: 0 auto;
   border-radius: 15px;
