--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,12 @@ body
   margin: 0;
   padding: 0;
 }
+p, label
+{
+  font-size: 12px;
+  margin: auto;
+}
+
 
 
 /* estilos de la barra de navegacióm */
@@ -108,7 +114,7 @@ hr {
   color: white;
   width: 100%;
   padding: 10px;
-  font-size: 12px;
+  font-size: 16px;
   border: 0;
   border-radius: 2px;
   cursor: pointer;
@@ -138,26 +144,6 @@ hr {
   background-color:wheat;
   padding: var(--space);
   box-shadow: var(--box);
-}
-.imgContainer
-{
-  align-content: center;
-}
-.mainButton
-{
-  background-color: var(--green-color);
-  color: white;
-  width: 100%;
-  padding: 10px;
-  font-size: 12px;
-  border: 0;
-  border-radius: 2px;
-  cursor: pointer;
-}
-.mainButton:hover
-{
-  background-color: var(--green-color2);
- 
 }
 
 /* Estilos del header */
@@ -225,5 +211,34 @@ hr {
   color: white;
   text-align: center;
   border-radius: 15px;
-
+}
+/* Módulo Pago */
+.moduloPago
+{
+  box-shadow: var(--box);
+  background-color: var(--white-color);
+  text-align: left;
+  padding: 5%;
+  margin: auto;
+} 
+.moduloPagoImage
+{
+  max-width: 200px;
+  margin: auto;
+  width: 100%;
+}
+.moduloPagoInput{
+  margin-top: --space;
+  padding: 5px;
+  width: 100%;
+  height: 30px;
+  border-radius: 2px;
+  border: 1px solid --black-color;
+  box-sizing: border-box;
+}
+.moduloPago .mainButton
+{
+  margin-top: 10px;
+  width: 90%;
+  margin-left: 5%;
 }
