Se incorporan los enlaces internos

--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,9 @@ hr {
   text-align: center;
   border-radius: 15px;
 }
+#footer a{
+  color: var(--green-color);
+}
 /* Módulo Pago */
 .moduloPago
 {
